# standalone_collision_check

./: CMakeLists.txt  LICENSE.md  README.md  license.txt  package.xml
include/: standalone_collision_check.h
launch/: standalone_collision_check.launch
src/: standalone_collision_check.cpp
