<?xml version="1.0"?>
<package format="2">
  <name>standalone_collision_check</name>
  <version>0.0.0</version>
  <description>
      Use MoveIt! to check the collision state of a given robot model.
  </description>

  <author>Andy Zelenak</author>
  <author email="andyz@utexas.edu">Andy Zelenak</author>
  <maintainer email="andyz@utexas.edu">Andy Zelenak</maintainer>

  <license>See license.txt</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>roscpp</depend>
</package>
